--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "js/node.mjs",
   "scripts": {
     "start": "lr-http-server .",
-    "test": "node --experimental-modules js/node.mjs"
+    "test": "node --experimental-modules js/tests.mjs"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,9 @@
   "homepage": "https://github.com/bgard6977/wasm-int#readme",
   "dependencies": {
     "lr-http-server": "^0.1.5"
+  },
+  "devDependencies": {
+    "jasmine": "^3.1.0",
+    "jasmine-console-reporter": "^3.0.2"
   }
 }
