--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,4 @@ before_install:
   - pwd
   - ls -la
   - git clone https://github.com/juj/emsdk.git
-  - cd emsdk && ./emsdk update && ./emsdk install latest && ./emsdk activate latest
-  - cd source ./emsdk_env.sh
+  - cd emsdk && ./emsdk install latest && ./emsdk activate latest && source ./emsdk_env.sh
