--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,7 @@ node_js:
 before_install:
   - pwd
   - ls -la
+  - sudo apt-get update
+  - sudo apt-get install -y python2.7 cmake
   - git clone https://github.com/juj/emsdk.git
   - cd emsdk && ./emsdk install latest && ./emsdk activate latest && source ./emsdk_env.sh
