--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,8 @@ before_install:
   - sudo apt-get update
   - sudo apt-get install -y python2.7 cmake
   - git clone https://github.com/juj/emsdk.git
-  - cd emsdk && ./emsdk install latest && ./emsdk activate latest && source ./emsdk_env.sh
+  - cd emsdk 
+  - ./emsdk install latest
+  - ./emsdk activate latest
+  - source ./emsdk_env.sh
+  - cd ..
