--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install:
   - pwd
   - ls -la
   - sudo apt-get update
-  - sudo apt-get install -y python2.7 cmake
+  - sudo apt-get install -y build-essential python2.7 cmake
   - git clone https://github.com/juj/emsdk.git
   - cd emsdk 
   - ./emsdk install latest
