--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 before_install:
   - pwd
   - ls -la
-  - sudo apt-get update
+  - sudo apt-get update && sudo apt-get upgrade
   - sudo apt-get install -y build-essential python2.7 cmake
   - git clone https://github.com/juj/emsdk.git
   - cd emsdk 
