--- a/.travis.yml
+++ b/.travis.yml
@@ -4,30 +4,22 @@ node_js:
   - "10.4.0"
 cache:
   directories:
-    - emsdk/clang/
-    - emsdk/emscripten/
-    - emsdk/node/
-    - emsdk/zips/
+    - backup/
 before_install:
   - pwd
   - ls -la
   - sudo apt-get update
   - sudo apt-get install -y build-essential python2.7 cmake libstdc++6
-  - mkdir -p emsdk/clang
-  - mkdir -p emsdk/emscripten
-  - mkdir -p emsdk/node
-  - mkdir -p emsdk/zips
-  - mkdir backup/
-  - mv emsdk/clang backup/
-  - mv emsdk/emscripten backup/
-  - mv emsdk/node backup/
-  - mv emsdk/zips backup/
   - rm -rf emsdk
   - git clone https://github.com/juj/emsdk.git
-  - mv bacup/* emsdk/
   - cd emsdk 
+  - cp -R $TRAVIS_BUILD_DIR/backup/* .
   - ./emsdk install latest
   - ./emsdk activate latest
+  - cp -R clang/ $TRAVIS_BUILD_DIR/backup/
+  - cp -R emscripten/ $TRAVIS_BUILD_DIR/backup/
+  - cp -R node/ $TRAVIS_BUILD_DIR/backup/
+  - cp -R zips/ $TRAVIS_BUILD_DIR/backup/
   - printenv
   - export PATH=$PATH:$TRAVIS_BUILD_DIR/emsdk
   - export PATH=$PATH:$TRAVIS_BUILD_DIR/emsdk/clang/e1.38.8_64bit
